# rust-http-content-type

./: .gitignore  .travis.yml  Cargo.toml  README.md  generate  generate.py
generator/: Cargo.toml
generator/src/: download.rs  lib.rs
src/: lib.rs
src/generator/: main.rs  mimegen.rs  mimes.txt
