[package]

name = "content_type"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.1.0"

[lib]

name = "content_type"
path = "src/lib.rs"

[dependencies.http]

git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.generator]

path = "generator"

[dependencies.phf]

git = "https://github.com/sfackler/rust-phf.git"
path = "phf"
